<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/maze_root_background"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/adventureSetupRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/adventureGuidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/adventureGuidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85" />

        <TextView
            android:id="@+id/adventureSetupTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="32dp"
            android:text="@string/adventure_setup_title"
            android:textColor="@color/maze_status_text"
            android:textSize="@dimen/start_menu_title_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/adventureGuidelineEnd"
            app:layout_constraintStart_toEndOf="@id/adventureGuidelineStart"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/adventureButtonColumn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/adventureGuidelineEnd"
            app:layout_constraintStart_toEndOf="@id/adventureGuidelineStart"
            app:layout_constraintTop_toBottomOf="@id/adventureSetupTitle"
            app:layout_constraintVertical_bias="0.1">

            <Button
                android:id="@+id/buttonAdventureResume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/start_menu_button_min_height"
                android:text="@string/adventure_resume"
                android:textSize="@dimen/start_menu_button_text_size"
                app:autoSizeMaxTextSize="@dimen/start_menu_button_text_size"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeTextType="uniform" />

            <Button
                android:id="@+id/buttonAdventureStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/start_menu_button_gap"
                android:minHeight="@dimen/start_menu_button_min_height"
                android:text="@string/adventure_start"
                android:textSize="@dimen/start_menu_button_text_size"
                app:autoSizeMaxTextSize="@dimen/start_menu_button_text_size"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeTextType="uniform" />

            <Button
                android:id="@+id/buttonAdventurePickDifficulty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/start_menu_button_gap"
                android:minHeight="@dimen/start_menu_button_min_height"
                android:textSize="@dimen/start_menu_button_text_size"
                app:autoSizeMaxTextSize="@dimen/start_menu_button_text_size"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeTextType="uniform" />

            <TextView
                android:id="@+id/adventureSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/start_menu_button_gap"
                android:gravity="center"
                android:textColor="@color/maze_status_text"
                android:textSize="14sp" />

            <Button
                android:id="@+id/buttonAdventureLegend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/start_menu_button_gap"
                android:minHeight="@dimen/start_menu_button_min_height"
                android:text="@string/legend"
                android:textSize="@dimen/start_menu_button_text_size"
                app:autoSizeMaxTextSize="@dimen/start_menu_button_text_size"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeTextType="uniform" />

            <Button
                android:id="@+id/buttonAdventureBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/start_menu_button_gap"
                android:minHeight="@dimen/start_menu_button_min_height"
                android:text="@string/adventure_back"
                android:textSize="@dimen/start_menu_button_text_size"
                app:autoSizeMaxTextSize="@dimen/start_menu_button_text_size"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeTextType="uniform" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
